# embedder

./: EmbedText.py  README.md  pyproject.toml  requirements.txt
configs/: single_config.yaml
src/EmbedTextPackage/: EmbedText.py
src/embed_text_package/: embed_text.py  embed_text_v2.py  utils.py
src/embed_text_package/models/: __init__.py  deepseek.py  llama.py
tests/: test_embeds.py  test_embeds_v2.py  test_vllm_implementation.py
