[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embed_text_package"
version = "0.0.1"
authors = [
  { name="Luca Morlok", email="luca.morlok@stanford.edu" },
  { name="Martin Nguyen", email="nqduc@cs.stanford.edu" },
]
description = "A small package providing a function for embedding extraction"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/stair-lab/embedder"

[tool.hatch.build.targets.wheel]
      packages = ["src/embed_text_package"]